(lang dune 3.17)

(name saba)

(generate_opam_files true)

(source
 (github WINSDK/careful.observer))

(authors "Nicolas Mazzon <nicolas@careful.observer>")

(maintainers "Nicolas Mazzon <nicolas@careful.observer>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name saba)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (stdio
   (>= v0.17))
  (ppx_jane
   (>= v0.17))
  (core_unix
   (>= v0.17))
  (core
   (>= v0.17))
  (async
   (>= v0.17))
  ocaml
  dune)
 (tags
  ("add topics" "to describe" your project)))
